fix: add background color to "contact" section; fix "about" section overlapping on the "service" section; make "service's" cetion grid more adequate in terms of responsivity

--- a/plants/scss/layout/_contact.scss
+++ b/plants/scss/layout/_contact.scss
@@ -1,5 +1,6 @@
 .contact {
   padding-top: 32px;
+  background-color: $bg-color-section;
 
   .contact-bg{
     background-image: url("../assets/img/contact_woman 1.png");
