--- a/plants/scss/layout/_service.scss
+++ b/plants/scss/layout/_service.scss
@@ -20,9 +20,9 @@
     .infobox {
       height: 438px;
       text-align: center;
-      padding: 0 62px;
+      padding: 0 4%;
       margin-top: 49px;
-
+      min-width: 280px;
 
       .infobox-img {
         width: 100%;
